accent color at full learned song

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --just-white: #FFFFFF;
+    --just-white: #ffffff;
     --main-black: #262020;
     --warm-black: #111111;
     --roth-yellow: #fdca4a;
@@ -8,26 +8,26 @@ body {
     padding: 0;
     margin: 4pxpx;
     box-sizing: border-box;
-    font-family: 'Outfit', sans-serif;
+    font-family: "Outfit", sans-serif;
     color: var(--just-white);
     background: var(--warm-black);
     display: flex;
     justify-content: center;
 }
-main{
+main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-main img{
+main img {
     width: 120px;
     margin-top: 28px;
 }
-#addSongForm{
-    margin-bottom: 32px; 
-    padding-bottom: 32px; 
+#addSongForm {
+    margin-bottom: 32px;
+    padding-bottom: 32px;
     border-bottom: solid 1px var(--main-black);
 }
 
@@ -38,7 +38,7 @@ main img{
     margin: 0 8px;
     color: var(--roth-yellow);
     font-weight: 700;
-    font-family: 'Outfit', sans-serif;
+    font-family: "Outfit", sans-serif;
     border-radius: 20px;
     padding-left: 20px;
 }
@@ -51,19 +51,19 @@ main img{
     height: 28px;
     border-radius: 15px;
     background: var(--roth-yellow);
-    font-family: 'Outfit', sans-serif;
+    font-family: "Outfit", sans-serif;
     border: none;
-    transition: .2s;
+    transition: 0.2s;
     cursor: pointer;
 }
-#addSongForm button:hover{
-    box-shadow: 1px -1px 4px 2px rgba(66,54,54,0.49) inset;
-    -webkit-box-shadow: 1px -1px 4px 2px rgba(66,54,54,0.49) inset;
-    -moz-box-shadow: 1px -1px 4px 2px rgba(66,54,54,0.49) inset;
+#addSongForm button:hover {
+    box-shadow: 1px -1px 4px 2px rgba(66, 54, 54, 0.49) inset;
+    -webkit-box-shadow: 1px -1px 4px 2px rgba(66, 54, 54, 0.49) inset;
+    -moz-box-shadow: 1px -1px 4px 2px rgba(66, 54, 54, 0.49) inset;
 }
 
-@media (max-width: 500px){
-    #addSongForm{
+@media (max-width: 500px) {
+    #addSongForm {
         display: flex;
         flex-direction: column;
         text-align: center;
@@ -71,4 +71,26 @@ main img{
         align-items: center;
         gap: 20px;
     }
+}
+
+input[type="checkbox"] {
+    width: 30px;
+    height: 30px;
+    filter: hue-rotate(200deg) brightness(0.5);
+}
+
+.ready input[type="checkbox"] {
+    width: 30px;
+    height: 30px;
+    filter: invert(100%) hue-rotate(344deg) brightness(1.7);
+}
+.ready {
+    color: var(--roth-yellow);
+}
+
+button {
+    background: #333;
+    color: white;
+    border-radius: 5px;
+    padding: 10px 15px;
 }
